--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "serverHost": "example.aternos.me",
-  "serverPort": 12345,
+  "serverHost": "nutsnig.minefort.com",
+  "serverPort": 25565,
   "botUsername": "IceLaterBot",
   "botChunk": 1
 }
